# agentic-intelligence-systems

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  payload.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: README.md
docs/: agent_side_implementation_plan.rst  agentic_concierge_specification.rst  backend_frontend_integration_plan.rst  better expriacne v1.sql  better_experience_pitch_deck_pages_8_29.md  conf.py  contract_design_plan.rst  index.rst  installation.rst  postman_collection.json  recommendation_recovery_evolution_plan.rst
docs/_static/: README.md
docs/_templates/: README.md
docs/api/: agent_private_contract_v1.rst  index.rst  public_api_contract_v1.rst  tool_contract_catalog_v1.rst
docs/examples/: index.rst
evals/datasets/: README.md
notebooks/: evaluation.ipynb  exploration.ipynb
requirements/: base.txt  dev.txt  docs.txt  test.txt
scripts/: __init__.py
src/agentic_intelligence_systems/: __init__.py  config.py
src/agentic_intelligence_systems/agents/: __init__.py  booking.py  booking_recovery.py  guest_reception.py  interaction.py  message_semantics.py  open_intents.py  planner.py  planner_models.py  planner_state.py  recommendation.py  search_knowledge.py  sentiment.py  service_request.py  welcome.py
src/agentic_intelligence_systems/api/: __init__.py  app.py  dependencies.py  routes.py
src/agentic_intelligence_systems/cli/: __init__.py  admin.py  chat.py  inventory_seed.py  state.py
src/agentic_intelligence_systems/clients/: __init__.py  backend_api.py  backend_availability.py  backend_normalizers.py  backend_routes.py  llm_provider.py  proposal_execution.py
src/agentic_intelligence_systems/contracts/: __init__.py  common.py  private_api.py  tools.py
src/agentic_intelligence_systems/data/: __init__.py  loader.py  preprocessor.py
src/agentic_intelligence_systems/memory/: README.md  __init__.py  summarizer.py
src/agentic_intelligence_systems/observability/: context.py  logging.py
src/agentic_intelligence_systems/orchestration/: __init__.py  conversation_state.py  policies.py  responder.py
src/agentic_intelligence_systems/prompts/: __init__.py
src/agentic_intelligence_systems/prompts/schema/: README.md  (+1 more)
src/agentic_intelligence_systems/tools/: __init__.py
src/agentic_intelligence_systems/utils/: __init__.py  booking_inputs.py  dates.py  helpers.py
tests/: __init__.py
tests/integration/: README.md  __init__.py
tests/unit/: README.md  __init__.py  conftest.py  test_admin_cli.py  test_api.py  test_backend_api.py  test_chat_cli.py  test_cli_state.py  test_config.py  test_dialogue_flow.py  test_intelligence.py  test_llm_provider.py  test_open_chat.py
(+2 files in other folders)
